--- a/site/personal.css
+++ b/site/personal.css
@@ -339,29 +339,30 @@ p {
   min-width: 35%;
   text-align: center;
   margin: auto;
-  padding: 20px;
+  padding: 18px;
   border-radius: 8px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  border: 3px solid #ddd;
+  border: 3px solid #B100FF;
+  background-color: #DFC4FF;
 }
 
 .instructions-container h3 {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-size: 24px;
-  color: #362266;
+  font-size: 30px;
+  color: #A226AD;
   padding: 8px;
   border-bottom: 1px solid #ddd;
 }
 
 .instructions-container p {
   margin-bottom: 15px;
-  font-size: 16px;
+  font-size: 20px;
   padding: 0 20px;
 }
 
 .instructions-container .disclaimer {
-  color: #474747;
+  color: #33004A;
   padding: 0 20px 0px;
 }
 
@@ -939,7 +940,7 @@ a {
   font-weight: bold;
   display: inline-block;
   margin-top: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 13px;
   padding: 8px 20px;
   background-color: #FFFFFF;
   color: #5D3AB0;
