שיפורים עבור SEO

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,6 +14,16 @@
   <link rel="stylesheet" href="/assets/css/personal.css">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TGD4VQW4X8"></script>
   <script src="https://nhlocal.github.io/general-settings.js"></script>
+  <script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "WebSite",
+	  "url": "https://nhlocal.github.io/shir-bot/",
+	  "name": "שיר-בוט",
+	  "description": "חיפוש חופשי והורדה בתוך מאגר של עשרות אלפי שירים..."
+	}
+  </script>
+  {% seo %}
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
   {% include header.html %}
