--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -2,11 +2,11 @@
   <header class="ripple-header">
     <a class="feedback-button" href="mailto:mesader.singelim@gmail.com" target="_blank" title="שלח משוב"><i class="fas fa-envelope"></i></a>
     <a class="right-item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר">
-      <img width="50" style="border-radius: 48%;" src="/assets/images/NH.LOCAL.jpg" alt="הסמל של המחבר">
+      <img width="50" style="border-radius: 48%;" src="{{ site.baseurl }}/assets/images/NH.LOCAL.jpg" alt="הסמל של המחבר">
     </a>
     <center class="parent-element">
       <h3 id="nextObject">
-        <img width="85" src="/assets/images/logo.png" alt="סמל האתר"> שיר-בוט
+        <img width="85" src="{{ site.baseurl }}/assets/images/logo.png" alt="סמל האתר"> שיר-בוט
       </h3>
     </center>
   </header>
