--- a/docs/_layouts/artist.html
+++ b/docs/_layouts/artist.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div id="loadingMessage" class="loading-message">
   <div class="progress-bar-container">
-    <img src="/assets/images/loading.gif" alt="טעינה" />
+    <img src="{{ site.baseurl }}/assets/images/loading.gif" alt="טעינה" />
     <span id="progressText"></span>
     <div class="progress-bar">
       <div id="progress" class="progress"></div>
