תיקון קישורי JS

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,6 +24,12 @@
 	}
   </script>
   {% seo %}
+
+  <!-- הגדרת משתנה baseurl עבור JavaScript -->
+  <script>
+    var baseurl = "{{ site.baseurl }}";
+  </script>  
+
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
   {% include header.html %}
