דף 404 עדכני, קישור לדף ראשי עבור סמל שיר בוט

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -10,5 +10,8 @@
       </h3>
     </center>
   </header>
-  {% include search_form.html %}
+  <!-- תנאי להצגת טופס החיפוש -->
+  {% if page.show_search_form != false %}
+    {% include search_form.html %}
+  {% endif %}
 </div>
