--- a/docs/assets/css/personal.css
+++ b/docs/assets/css/personal.css
@@ -1178,3 +1178,43 @@ header.clicked::after {
   50% { color: #58135E; }
   100% { color: #FFFD55; }
 }
+
+
+/* styles.css */
+
+/* סגנון לדף 404 */
+.error-page {
+  background-color: #f8f9fa; /* רקע בהיר */
+  color: #343a40; /* צבע טקסט כהה */
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.error-page h1 {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+}
+
+.error-page h2 {
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.error-page p {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.error-page .btn {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+.error-page .btn:hover {
+  background-color: #0056b3;
+}
