דף רשימת אמנים, תיקון שגיאות

--- a/docs/_layouts/artist.html
+++ b/docs/_layouts/artist.html
@@ -43,3 +43,5 @@ layout: default
   <!-- Add this button in your HTML where you want it to appear -->
   <button id="loadMoreButton">טען עוד</button>
 </div>
+
+<script src="{{ site.baseurl }}/assets/js/search.js"></script>
