הוספת כפתור רשימת אמנים

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,13 +1,19 @@
 <div class="topnav">
   <header class="ripple-header">
-    <a class="feedback-button" href="mailto:mesader.singelim@gmail.com" target="_blank" title="שלח משוב"><i class="fas fa-envelope"></i></a>
+    <a class="feedback-button" href="mailto:mesader.singelim@gmail.com" target="_blank" title="שלח משוב">
+      <i class="fas fa-envelope"></i>
+    </a>
     <a class="right-item" href="https://nhlocal.github.io/" title="לשאר התוכנות של היוצר">
       <img width="50" style="border-radius: 48%;" src="{{ site.baseurl }}/assets/images/NH.LOCAL.jpg" alt="הסמל של המחבר">
     </a>
     <center class="parent-element">
       <h3 id="nextObject">
-        <img width="85" src="{{ site.baseurl }}/assets/images/logo.png" alt="סמל האתר"> שיר-בוט
+        <img width="85" src="{{ site.baseurl }}/assets/images/logo.png" alt="סמל האתר"> <span class="site-title">שיר-בוט</span>
       </h3>
+      <!-- קישור לדף רשימת האמנים -->
+      <a class="artists-link" href="{{ site.baseurl }}/artists/" title="רשימת אמנים">
+        <i class="fas fa-users"></i>
+      </a>
     </center>
   </header>
   <!-- תנאי להצגת טופס החיפוש -->
