--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -11,7 +11,7 @@
         <img width="85" src="{{ site.baseurl }}/assets/images/logo.png" alt="סמל האתר"> <span class="site-title">שיר-בוט</span>
       </h3>
       <!-- קישור לדף רשימת האמנים -->
-      <a class="artists-link" href="{{ site.baseurl }}/artists/" title="רשימת אמנים">
+      <a class="artists-link" href="{{ site.baseurl }}/artists" title="רשימת אמנים">
         <i class="fas fa-users"></i>
       </a>
     </center>
