עדכון מודעות ועיצוב

--- a/docs/assets/css/personal.css
+++ b/docs/assets/css/personal.css
@@ -342,15 +342,15 @@ p {
   padding: 18px;
   border-radius: 8px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  border: 3px solid #B100FF;
-  background-color: #DFC4FF;
+  border: 3px solid #ff0051;
+  background-color: #fff8fd;
 }
 
 .instructions-container h3 {
   margin-top: 10px;
   margin-bottom: 10px;
   font-size: 30px;
-  color: #A226AD;
+  color: #ff0066;
   padding: 8px;
   border-bottom: 1px solid #ddd;
 }
