--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1,23 +1,23 @@
+/* Moved universal reset to top */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 /* Button hover effect */
 .button-image:hover {
   opacity: 0.95;
   transform: scale(0.98);
   transition: all 0.3s ease-in-out;
   cursor: pointer;
-  }
-  
-  main {
+}
+
+main {
   margin-top: 30px;
-  }
-  
-  /* Top bar menu */
-  *  {
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* Button style */
-  a:link.butt, a:visited.butt {
+}
+
+/* Button style */
+a:link.butt, a:visited.butt {
   padding: 10px;
   text-align: center;
   border-radius: 5px;
@@ -26,15 +26,15 @@
   background-color: #fff;
   color: black;
   font-weight: bold;
-  }
-  
-  a:hover.butt, a:active.butt {
-    color: #00BCD4;  /* Highlight color on hover/active */
-    background-color: #C0C0C0;
-  }
-  
-  /* Centered red button style */
-  a:link.center_butt, a:visited.center_butt {
+}
+
+a:hover.butt, a:active.butt {
+  color: #00BCD4;  /* Highlight color on hover/active */
+  background-color: #C0C0C0;
+}
+
+/* Centered red button style */
+a:link.center_butt, a:visited.center_butt {
   border-radius: 10px;
   background-color: #f44336;
   color: white;
@@ -42,83 +42,83 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  }
-  
-  a:hover.center_butt, a:active.center_butt {
-    background-color: red;
-  }
-  
-  body {
-    font-family: 'Arimo', sans-serif;  /* Arimo font */
-    max-width: 100%;
-    overflow-x: hidden;
-  }
-  
-  /* הגדרת הודעה קופצת */
-  .alert {
-    border-radius: 10px;
-    background-color: #7E57C2;  /* Primary color */
-    width: 70%;
-    color: white;
-    padding: 25px 25px;  
-    text-align: center;
-    text-decoration: none;
-    margin: auto;
-  }
-  
-  .closebtn {
-    margin-left: 15px;
-    color: white;
-    font-weight: bold;
-    float: right;
-    font-size: 22px;
-    line-height: 20px;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-  
-  .closebtn:hover {
-    color: black;
-  }
-  
-  /* הגדרת עיצוב פס גלילה */
-  ::-webkit-scrollbar {
-    width: 8px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background-color:  #7E57C2;  /* Primary color */
-    border-radius: 4px;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background-color:  #5C3899;  /* Darker primary color on hover */
-  }
-  
-  /* הגדרת הקו המהבהב */
-  .search-input::-webkit-caret {
-    border-width: 2px;
-  }
-  
-  .search-input::-moz-caret {
-    border-width: 2px;
-  }
-  
-  .search-input::caret {
-    border-width: 2px;
-  }
-  
-  .search-input::-webkit-caret {
-    border-style: solid;
-    border-color: #7E57C2;  /* Primary color */
-  }
-  
-  .search-input::-moz-caret {
-    border-style: solid;
-    border-color: #7E57C2;  /* Primary color */
-  }
-  
-  .search-input::caret {
-    border-style: solid;
-    border-color: #7E57C2;  /* Primary color */
-  }
+}
+
+a:hover.center_butt, a:active.center_butt {
+  background-color: red;
+}
+
+body {
+  font-family: 'Arimo', sans-serif;  /* Arimo font */
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+/* הגדרת הודעה קופצת */
+.alert {
+  border-radius: 10px;
+  background-color: #7E57C2;  /* Primary color */
+  width: 70%;
+  color: white;
+  padding: 25px 25px;  
+  text-align: center;
+  text-decoration: none;
+  margin: auto;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
+
+/* הגדרת עיצוב פס גלילה */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color:  #7E57C2;  /* Primary color */
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color:  #5C3899;  /* Darker primary color on hover */
+}
+
+/* הגדרת הקו המהבהב */
+.search-input::-webkit-caret {
+  border-width: 2px;
+}
+
+.search-input::-moz-caret {
+  border-width: 2px;
+}
+
+.search-input::caret {
+  border-width: 2px;
+}
+
+.search-input::-webkit-caret {
+  border-style: solid;
+  border-color: #7E57C2;  /* Primary color */
+}
+
+.search-input::-moz-caret {
+  border-style: solid;
+  border-color: #7E57C2;  /* Primary color */
+}
+
+.search-input::caret {
+  border-style: solid;
+  border-color: #7E57C2;  /* Primary color */
+}
